Small cleanup and additions

--- a/ngLessonLocker/src/app/components/about/about.component.html
+++ b/ngLessonLocker/src/app/components/about/about.component.html
@@ -4,4 +4,31 @@
             <h1>About</h1>
         </div>
     </div>
+    <div class="row">
+        <div class="col">
+            <h3>Technologies Used</h3>
+            <li>Java</li>
+            <li>Spring Boot</li>
+            <li>JPA</li>
+            <li>JUnit tests</li>
+            <li>Angular</li>
+            <li>MySql</li>
+            <li>HTML,CSS</li>
+            <li>Bootstrap</li>
+            <li>Trello</li>
+            <h3>Lessons Learned</h3>
+            <li>Practice of complete REST API Development.</li>
+            <li>Deploying Spring Boot application and Database to Tomcat10/Apache server hosted on AWS.</li>
+            <li>Using AJAX (Async Javascript And XML) requests via Angular Service Layer.</li>
+            <li>Design and redesign of MySQL database.</li>
+            <li>Complete relationships, dual primary keys and related Entity mapping.</li>
+            <h3>Features</h3>
+            <li>Full REST API with security configuration for CRUD Operations.</li>
+            <li>MySQL Database.</li>
+            <li>Spring Boot.</li>
+            <li>Angular.</li>
+            <li>HTML, CSS, Bootstrap.</li>
+            <li>URL activatedRoute.paramMap for detail view.</li>
+        </div>
+    </div>
 </div>
