--- a/ngLessonLocker/src/app/components/welcome/welcome.component.html
+++ b/ngLessonLocker/src/app/components/welcome/welcome.component.html
@@ -5,4 +5,11 @@
             <p>Thank you for registering as a new user!</p>
         </div>
     </div>
+    <div class="row">
+        <div class="col">
+            <h3>Lesson Locker Rules</h3>
+            <p>By use of this application, you consent to acting professionally and only providing well formed content.
+            </p>
+        </div>
+    </div>
 </div>
