--- a/ngLessonLocker/src/app/components/home/home.component.html
+++ b/ngLessonLocker/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>Home</h1>
+            <h1 class="text-center text-success">Lesson Locker</h1>
         </div>
     </div>
 </div>
