--- a/ngLessonLocker/src/app/components/root/root.component.html
+++ b/ngLessonLocker/src/app/components/root/root.component.html
@@ -1,7 +1,20 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>Welcome to Lesson Locker</h1>
+            <h1 class="text-center text-success">Lesson Locker</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <p>Like the OCA Preparation quiz questions application, Lesson Locker maintains a list of quiz style
+                questions and answers for material related to coding concepts.</p>
+            <p>Registered users (student) submit questions for approval.</p>
+            <p>Registered users (instructor) approve questions.</p>
+            <p>Logged in users (student) can answer quiz questions.</p>
+            <p>Logged in users (instructor) hosts a ‘break-time’ question that is shown via zoom.</p>
+            <p>Logged in users (student) answer the zoom question.</p>
+            <p>Logged in users (student) answer other questions that are part of a quiz.</p>
+            <p>Logged in users (admin) can enable/disable users and assign students to cohorts.</p>
         </div>
     </div>
 </div>
