Choices working correctly

--- a/ngLessonLocker/src/app/components/question/question.component.html
+++ b/ngLessonLocker/src/app/components/question/question.component.html
@@ -14,11 +14,11 @@
             <div class="col">
                 <p><span>Id:</span> {{selectedQuestion.id}}</p>
 
-                <p><span>Question:</span> {{selectedQuestion.question}}</p>
+                <pre><span>Question:</span> {{selectedQuestion.question}}</pre>
 
-                <p><span>Hint:</span> {{selectedQuestion.hint}}</p>
+                <pre><span>Hint:</span> {{selectedQuestion.hint}}</pre>
 
-                <p><span>Explanation:</span> {{selectedQuestion.explanation}}</p>
+                <pre><span>Explanation:</span> {{selectedQuestion.explanation}}</pre>
 
                 <p><span>Enabled:</span> {{selectedQuestion.enabled}}</p>
             </div>
