--- a/ngLessonLocker/src/app/components/instructor-break/instructor-break.component.html
+++ b/ngLessonLocker/src/app/components/instructor-break/instructor-break.component.html
@@ -1,78 +1,173 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>Instructor Break Question</h1>
+            <h1 class="text-danger text-center border-primary" id="clock"></h1>
+            <div *ngIf="checkLoggedInUserRole()==='instructor'" class="container">
+                <button *ngIf="this.interval===null" class="btn btn-warning m-2 w-100" (click)="startClock()">Start
+                    Clock</button>
+            </div>
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <p>( {{this?.selectedQuizId}} ) Quiz Id: {{this?.selectedQuiz?.id}}</p>
-        </div>
-    </div>
-</div>
+<div *ngIf="checkLoggedInUserRole()==='student'" class="container">
 
-<div class="container" *ngIf="isFound===true">
+    <!-- <h3 class="text-center text-success">Break Time Question : Quiz Id: ( {{this?.selectedQuizId}} )</h3> -->
 
-    <h1 class="text-center bg-success text-white">{{this.selectedQuiz?.title}}</h1>
-
-    <div *ngIf="this.quizQuestions.length>0" class="container">
-        <div *ngFor="let question of quizQuestions" class="row">
-            <div class="col">
-                <p><span>Question:</span>{{question.question?.question}}</p>
-                <p><span>Hint:</span>{{question.question?.hint}}</p>
-                <p><span>Explanation:</span>{{question.question?.explanation}}</p>
-                <!-- <p>Tags:{{question.question?.tags | json}}</p> -->
-                <br>
-                <hr>
-                <h3>Tags</h3>
-                <div *ngFor="let tag of question.question?.tags || []" class="row">
-                    <div class="col">
-                        {{tag?.title}}
-                    </div>
-                </div>
-                <br>
-                <hr>
-                <h3>Choices</h3>
-                <!-- <p>Choices:{{question.question?.choices| json}}</p> -->
-                <div *ngFor="let choice of question.question?.choices || []" class="row">
-                    <div class="col">
-                        <div class="row">
-                            <div class="col">
-                                <p>Id:{{choice?.id}}</p>
-                            </div>
-                            <div class="col">
-                                <p>Content:{{choice?.content}}</p>
-                            </div>
-                            <div class="col">
-                                <p>Explanation:{{choice?.explanation}}</p>
-                            </div>
-                            <div class="col">
-                                <p>Is correct choice?:{{choice?.correct}}</p>
+    <div class="container" *ngIf="isFound===true">
+        <h3>Quiz Id: ( {{this?.selectedQuizId}} ), Quiz Title: {{this.selectedQuiz?.title}}</h3>
+        <hr>
+        <div *ngIf="this.quizQuestions.length===1" class="container">
+            <div *ngFor="let question of quizQuestions" class="row">
+                <div class="col">
+                    <h1>Question:</h1>
+                    <pre>{{question.question?.question}}</pre>
+                    <pre class="d-none bg-light"><span>Hint:</span>{{question.question?.hint}}</pre>
+                    <pre class="d-none bg-light"><span>Explanation:</span>{{question.question?.explanation}}</pre>
+                    <!-- <p>Tags:{{question.question?.tags | json}}</p> -->
+                    <h3>Choices</h3>
+                    <!-- <p>Choices:{{question.question?.choices| json}}</p> -->
+                    <div *ngFor="let choice of question.question?.choices || []" class="row">
+                        <div class="col">
+                            <div class="row">
+                                <div class="col">
+                                    <p>Id:{{choice?.id}}</p>
+                                </div>
+                                <div class="col">
+                                    <p>Content:{{choice?.content}}</p>
+                                </div>
+                                <!-- <div class="col">
+                                    <p>Explanation:{{choice?.explanation}}</p>
+                                </div> -->
+                                <!-- <div class="col">
+                                    <p>Is correct choice?:{{choice?.correct}}</p>
+                                </div> -->
                             </div>
                         </div>
                     </div>
+                    <br>
+                    <hr>
+                    <form (ngSubmit)="submitAnswer()">
+                        <div class="row">
+                            <div class="col">
+                                <label for="answer">Choose one answer from below:</label>
+                                <select name="answer" id="answer" class="form-control" [(ngModel)]="this.selectedAnswer"
+                                    required>
+                                    <option selected [value]="0">Please choose an answer from the selection
+                                        below.
+                                    </option>
+                                    <ng-container *ngFor="let choice of question.question?.choices || []">
+                                        <option [value]="choice?.id">{{choice?.content}}</option>
+                                    </ng-container>
+                                </select>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-success mt-4">Submit Answer</button>
+                    </form>
                 </div>
-                <br>
-                <hr>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col">
-                        <p>Enabled:{{question.question?.enabled}}</p>
+                        <h3>Tags</h3>
+                        <div *ngFor="let tag of question.question?.tags || []" class="row">
+                            <div class="col">
+                                {{tag?.title}}
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <p>Question Creator (User):{{question.question?.user?.username}}</p>
+                </div> -->
+            </div>
+        </div>
+
+    </div>
+
+</div>
+
+
+<div *ngIf="checkLoggedInUserRole()==='instructor'" class="container">
+
+    <h1 class="text-center text-primary">Break Time Question : Quiz Id: ( {{this?.selectedQuizId}} )</h1>
+
+    <div class="container" *ngIf="isFound===true">
+        <h3>Quiz Title: {{this.selectedQuiz?.title}}</h3>
+        <div *ngIf="this.quizQuestions.length===1" class="container">
+            <div *ngFor="let question of quizQuestions" class="row">
+                <div class="col">
+                    <h1>Question:</h1>
+                    <pre>{{question.question?.question}}</pre>
+                    <pre *ngIf="this.showHints===true"
+                        class="bg-light"><span>Hint: &nbsp; </span>{{question.question?.hint}}</pre>
+
+                    <!-- <p>Tags:{{question.question?.tags | json}}</p> -->
+                    <br>
+                    <hr>
+                    <h3>Choices</h3>
+                    <!-- <p>Choices:{{question.question?.choices| json}}</p> -->
+                    <div *ngFor="let choice of question.question?.choices || []" class="row">
+                        <div class="col">
+                            <div class="row">
+                                <div class="col">
+                                    <p>Id:{{choice?.id}}: {{choice?.content}}</p>
+                                </div>
+                                <div *ngIf="this.showAnswers===true" id="explanation" class="col">
+                                    <p>Explanation:{{choice?.explanation}}</p>
+                                </div>
+                                <div *ngIf="this.showAnswers===true" id="correct" class="col">
+                                    <p [ngClass]="choice?.correct ? 'text-success' : 'text-danger'">Is correct choice?:
+                                        {{choice?.correct}}</p>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <p>Created At:{{question.question?.createdAt | date: 'dd/MM/yyyy HH:MM:ss'}}</p>
+                    <pre *ngIf="this.showAnswers===true"
+                        class="bg-light"><span>Explanation: &nbsp; </span>{{question.question?.explanation}}</pre>
+                    <div class="row">
+                        <div class="col text-center">
+                            <button class="btn btn-primary m-2" (click)="showTheHints()">Show The Hints</button>
+                            <button class="btn btn-primary m-2" (click)="hideTheHints()">Hide The Hints</button>
+                            <button class="btn btn-primary m-2" (click)="showTheAnswers(true)">Show the Answers</button>
+                            <button class="btn btn-primary m-2" (click)="showTheAnswers(false)">Hide the
+                                Answers</button>
+                        </div>
                     </div>
-                    <div class="col">
-                        <p>Updated At:{{question.question?.updatedAt | date: 'dd/MM/yyyy HH:MM:ss'}}</p>
+                    <h3>Tags</h3>
+                    <div *ngFor="let tag of question.question?.tags || []" class="row">
+                        <div class="col">
+                            {{tag?.title}}
+                        </div>
+                    </div>
+                    <div class="row d-none">
+                        <div class="col">
+                            <p>Enabled:{{question.question?.enabled}}</p>
+                        </div>
+                        <div class="col">
+                            <p>Question Creator (User):{{question.question?.user?.username}}</p>
+                        </div>
+                        <div class="col">
+                            <p>Created At:{{question.question?.createdAt | date: 'dd/MM/yyyy HH:MM:ss'}}</p>
+                        </div>
+                        <div class="col">
+                            <p>Updated At:{{question.question?.updatedAt | date: 'dd/MM/yyyy HH:MM:ss'}}</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+</div>
+
+<div *ngIf="checkLoggedInUserRole()==='admin'" class="container">
+
+    <hr>
+    <hr>
+    <hr>
+
+
+</div>
+
+<div class="container">
+
+    <hr>
 
 </div>
