--- a/ngLessonLocker/src/app/components/questions/questions.component.html
+++ b/ngLessonLocker/src/app/components/questions/questions.component.html
@@ -27,12 +27,11 @@
           <td>{{ question.updatedAt }}</td>
           <td>{{ question.createdAt }}</td>
           <td>
+            <button class="btn btn-warning btn-sm" (click)="editQuestion(question); $event.stopPropagation()">Edit</button>
+         </td>
+          <td>
             <button class="btn btn-danger btn-sm" (click)="deleteQuestion(question.id); $event.stopPropagation()">Delete</button>
           </td>
-          <td>
-             <button class="btn btn-primary m-2" (click)="editQuestion(question); $event.stopPropagation()">Edit</button>
-          </td>
-       
         </tr>
       </tbody>
     </table>
