--- a/ngLessonLocker/src/app/components/question-modify/question-modify.component.html
+++ b/ngLessonLocker/src/app/components/question-modify/question-modify.component.html
@@ -31,10 +31,8 @@
                 <div class="form-group">
                     <label for="newChoice">New Choice</label>
                     <input type="text" class="form-control" id="newChoice" [(ngModel)]="newChoice.content"
-                        name="newChoice" placeholder="Choice content" />
-                    <button type="button" class="btn btn-primary mt-2" (click)="addChoice()">
-                        Add Choice
-                    </button>
+                        name="newChoice" placeholder="Choice content">
+                    <button type="button" class="btn btn-primary mt-2" (click)="addChoice()">Add Choice</button>
                 </div>
 
                 <div *ngIf="selected.choices.length > 0">
@@ -42,15 +40,14 @@
                     <ul class="list-group">
                         <li *ngFor="let choice of selected.choices; let i = index"
                             class="list-group-item d-flex justify-content-between align-items-center"
-                            [ngClass]="{ 'bg-success': choice.correct, 'bg-danger': !choice.correct }">
+                            [ngClass]="{'bg-success': choice.correct, 'bg-danger': !choice.correct}">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="correctChoice" [value]="choice"
-                                    [(ngModel)]="correctChoice" (change)="setCorrectChoice(choice)" />
+                                    [(ngModel)]="correctChoice" (change)="setCorrectChoice(choice)">
                                 <label class="form-check-label">{{ choice.content }}</label>
                             </div>
-                            <button type="button" class="btn btn-danger btn-sm" (click)="removeChoice(i)">
-                                Remove
-                            </button>
+                            <button type="button" class="btn btn-danger btn-sm"
+                                (click)="removeChoice(i)">Remove</button>
                         </li>
                     </ul>
                 </div>
@@ -81,8 +78,7 @@
                         <p>Choices:</p>
                         <ul>
                             <li *ngFor="let choice of selected.choices" title="{{choice.explanation}}">
-                                {{choice.content}}
-                            </li>
+                                {{choice.content}}</li>
                         </ul>
                     </div>
                 </div>
