--- a/ngLessonLocker/src/app/components/question-modify/question-modify.component.html
+++ b/ngLessonLocker/src/app/components/question-modify/question-modify.component.html
@@ -28,7 +28,7 @@
                         name="explanation" placeholder="Explanation"></textarea>
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="newChoice">New Choice</label>
                     <input type="text" class="form-control" id="newChoice" [(ngModel)]="newChoice.content"
                         name="newChoice" placeholder="Choice content">
@@ -50,7 +50,7 @@
                                 (click)="removeChoice(i)">Remove</button>
                         </li>
                     </ul>
-                </div>
+                </div> -->
 
                 <div class="mt-4">
                     <button type="submit" class="btn btn-success">Save</button>
