--- a/ngLessonLocker/src/app/components/questions/questions.component.html
+++ b/ngLessonLocker/src/app/components/questions/questions.component.html
@@ -14,6 +14,7 @@
           <th scope="col">Enabled</th>
           <th scope="col">Updated At</th>
           <th scope="col">Created At</th>
+          <th scope="col">Is Enabled</th>
           <th scope="col" colspan="2">Actions</th>
         </tr>
       </thead>
@@ -26,6 +27,7 @@
           <td>{{ question.enabled ? "Has been approved" : "Not yet approved" }}</td>
           <td>{{ question.updatedAt }}</td>
           <td>{{ question.createdAt }}</td>
+          <td>{{ question.enabled }}</td>
           <td>
             <button class="btn btn-warning btn-sm" (click)="editQuestion(question); $event.stopPropagation()">Edit</button>
          </td>
