--- a/ngLessonLocker/src/app/components/navigation/navigation.component.html
+++ b/ngLessonLocker/src/app/components/navigation/navigation.component.html
@@ -30,6 +30,9 @@
         <li class="nav-item" *ngIf="isLoggedIn() && (hasRole('student'))">
           <a class="nav-link" routerLink="/questions">Questions</a>
         </li>
+        <li class="nav-item" *ngIf="isLoggedIn() && (hasRole('instructor'))">
+          <a class="nav-link" routerLink="/quizzes">Quizzes</a>
+        </li>
         <li class="nav-item" *ngIf="isLoggedIn() && hasRole('instructor')">
           <a class="nav-link" routerLink="/reviews">Reviews</a>
         </li>
