--- a/ngLessonLocker/src/app/components/question-add/question-add.component.html
+++ b/ngLessonLocker/src/app/components/question-add/question-add.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="selected" class="container mt-4">
+<div *ngIf="!showDetailView" class="container mt-4">
 
   <form (ngSubmit)="saveQuestion()">
     <div class="form-group">
@@ -46,8 +46,10 @@
     <button type="submit" class="btn btn-success mt-4">Save</button>
     <button type="button" class="btn btn-secondary mt-4" (click)="cancel()">Cancel</button>
   </form>
+</div>
 
-  <!-- Detail View -->
+<!-- Detail View -->
+<div *ngIf="showDetailView" class="container mt-4">
   <section class="bg-light rounded mt-4">
     <div class="container" [ngClass]="selected.enabled ? 'border-success' : 'border-danger'">
       <div class="row">
