Full Circle Answers and more

--- a/ngLessonLocker/src/app/components/instructor-break/instructor-break.component.css
+++ b/ngLessonLocker/src/app/components/instructor-break/instructor-break.component.css
@@ -3,3 +3,10 @@ span {
     font-size: 22px;
     font-weight: bold;
 }
+
+.strike {
+    box-shadow: 2px 2px 2px 2px grey;
+    padding: 1px;
+    cursor: help;
+}
+
