More quiz features

--- a/ngLessonLocker/src/app/components/home/home.component.html
+++ b/ngLessonLocker/src/app/components/home/home.component.html
@@ -1,7 +1,16 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1 class="text-center text-success">Lesson Locker</h1>
+            <h1>Welcome to Lesson Locker</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h3>Lesson Locker Rules</h3>
+            <p>By use of this application, you consent to acting professionally and only providing well formed content.
+            </p>
+            <p>Note: Because questions can ultimately have submitted answers, editing question choices is not
+                implemented.</p>
         </div>
     </div>
 </div>
