--- a/ngLessonLocker/src/app/components/root/root.component.html
+++ b/ngLessonLocker/src/app/components/root/root.component.html
@@ -2,12 +2,15 @@
     <div class="row">
         <div class="col">
             <h1 class="text-center text-success">Lesson Locker</h1>
+            <p class="text-success">Presented by: Flutter Function, Skill Distillery, SD43!</p>
+            <hr>
         </div>
     </div>
     <div class="row">
         <div class="col">
-            <p>Like the OCA Preparation quiz questions application, Lesson Locker maintains a list of quiz style
-                questions and answers for material related to coding concepts.</p>
+            <h3 class="text-center">Like the OCA Preparation application, Lesson Locker maintains a list of quiz style
+                questions and answers for material related to coding concepts.</h3>
+            <hr>
             <p>Registered users (student) submit questions for approval.</p>
             <p>Registered users (instructor) approve questions.</p>
             <p>Logged in users (student) can answer quiz questions.</p>
@@ -15,6 +18,26 @@
             <p>Logged in users (student) answer the zoom question.</p>
             <p>Logged in users (student) answer other questions that are part of a quiz.</p>
             <p>Logged in users (admin) can enable/disable users and assign students to cohorts.</p>
+        </div>
+    </div>
+    <div class="container">
+        <hr>
+        <div class="row">
+            <div class="col">
+                <a href="https://www.linkedin.com/in/ashleymascarenas/" target="_blank">Ashley M.</a>
+                <ul>
+                    <li>SCRUM Master</li>
+                    <li>Repo Owner</li>
+                    <li>Develooper</li>
+                </ul>
+            </div>
+            <div class="col">
+                <a href="https://www.linkedin.com/in/sheldonpasciak/" target="_blank">Sheldon P.</a>
+                <ul>
+                    <li>DBA</li>
+                    <li>Develooper</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
