--- a/ngLessonLocker/src/app/components/welcome/welcome.component.html
+++ b/ngLessonLocker/src/app/components/welcome/welcome.component.html
@@ -10,6 +10,8 @@
             <h3>Lesson Locker Rules</h3>
             <p>By use of this application, you consent to acting professionally and only providing well formed content.
             </p>
+            <p>Note: Because questions can ultimately have submitted answers, editing question choices is not
+                implemented.</p>
         </div>
     </div>
 </div>
