--- a/ngLessonLocker/src/app/components/root/root.component.html
+++ b/ngLessonLocker/src/app/components/root/root.component.html
@@ -28,14 +28,14 @@
                 <ul>
                     <li>SCRUM Master</li>
                     <li>Repo Owner</li>
-                    <li>Develooper</li>
+                    <li>Developer</li>
                 </ul>
             </div>
             <div class="col">
                 <a href="https://www.linkedin.com/in/sheldonpasciak/" target="_blank">Sheldon P.</a>
                 <ul>
                     <li>DBA</li>
-                    <li>Develooper</li>
+                    <li>Developer</li>
                 </ul>
             </div>
         </div>
